--- a/package.json
+++ b/package.json
@@ -8,18 +8,16 @@
     "async": "^0.9.0",
     "cookie-parser": "^1.3.3",
     "express": "3.4.4",
-    "jade": "*",
     "mongoose": "^3.8.17",
     "nodemailer": "^1.3.0",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
-    "stylus": "*",
     "vash": "^0.7.12-1"
   },
   "devDependencies": {},
   "scripts": {
    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no specified\" && exit 1"
   },
   "license": "ISC"
 }
